--- a/misc/_posts/2024-07-11-contact.md
+++ b/misc/_posts/2024-07-11-contact.md
@@ -12,9 +12,10 @@ title: Contact
 <address>
 	The Hong Kong University of Science and Technology (Guangzhou)<br>
 	Sustainable Energy and Environment Thrust<br>
-	No. 1 Duxue Road<br>
+	W1-307, 1 Duxue Road<br>
 	Guangzhou 511400<br>
 	<!--Email: tb<span style="display:none">obfuscate</span>@bedford.io-->
+	Tel: +86 (020) 88332929<br>
 	yuhengli@hkust-gz.edu.cn
 </address>
 
