--- a/misc/_posts/2024-07-11-about.md
+++ b/misc/_posts/2024-07-11-about.md
@@ -1,9 +1,11 @@
 ---
-layout: misc
-title: About
+layout: default
+#title: About
 ---
 
-<!--<p>The site is based on the <a class="off" href="http://bedford.io/">Bedford</a> theme.</p>-->
+<p>The site is based on the <a class="off" href="http://bedford.io/">Bedford</a> theme.</p>
+
+<!--
 
 <div class="row">
     <div class="col-lg-12">
@@ -12,3 +14,5 @@ title: About
         </div>
     </div>
 </div>
+
+-->
