--- a/team/_posts/2024-08-01-yuheng-li.md
+++ b/team/_posts/2024-08-01-yuheng-li.md
@@ -1,7 +1,7 @@
 ---
 layout: member
 title: Yuheng Li
-position: Principal investigator
+position: Principal Investigator
 handle: yuhengli
 twitter: YuhengLI9
 github: yul549
