--- a/team/_posts/2024-08-01-yuheng-li.md
+++ b/team/_posts/2024-08-01-yuheng-li.md
@@ -6,7 +6,7 @@ handle: yuhengli
 twitter: YuhengLI9
 github: yul549
 scholar: FWpyNyYAAAAJ
-image: /images/team/yuheng-li.jpg
+image: /images/team/yuheng-li.png
 cv: /pdfs/team/yuheng-li-cv.pdf
 email: yuhengli@hkust-gz.edu.cn
 orcid: 0000-0002-1865-1122
