--- a/misc/_posts/2024-11-30-openings.md
+++ b/misc/_posts/2024-11-30-openings.md
@@ -3,6 +3,6 @@ layout: misc
 title: Openings
 ---
 
-<h2>We have several openings for PhD students, postdoctoral researchers, and research assistants in the Thrust of Sustainable Energy and Environment at the Hong Kong University of Science and Technology (Guangzhou), including those for Spring 2025 and Fall 2025. The detailed information can be found [here](https://mp.weixin.qq.com/s/EH8b18B-CgZZ2u3dEUR1dg) and [here](https://muchong.com/t-16248230-1).</h2>
+<p>We have several openings for PhD students, postdoctoral researchers, and research assistants in the Thrust of Sustainable Energy and Environment at the Hong Kong University of Science and Technology (Guangzhou), including those for Spring 2025 and Fall 2025. The detailed information can be found <a href="https://mp.weixin.qq.com/s/EH8b18B-CgZZ2u3dEUR1dg">here</a> and <a href="https://muchong.com/t-16248230-1">here</a> </p>
 
-<h2><b>This page is regularly updated.</b></h2>
+<p><b>This page is regularly updated.</b></p>
