--- a/team/_posts/2024-12-23-lijia-yao.md
+++ b/team/_posts/2024-12-23-lijia-yao.md
@@ -1,7 +1,7 @@
 ---
 layout: member
 title: Lijia Yao
-position: PhD Student (Incoming)
+position: PhD Student
 handle: lijiayao
 github: ljy-97-dev
 scholar: vF6m8YsAAAAJ
