--- a/misc/_posts/2024-11-30-openings.md
+++ b/misc/_posts/2024-11-30-openings.md
@@ -9,4 +9,4 @@ layout: default
 
 <p>We have several openings for PhD students, postdoctoral researchers, and research assistants in the Thrust of Sustainable Energy and Environment at the Hong Kong University of Science and Technology (Guangzhou) for <b>Fall 2025</b>. The detailed information can be found <a href="https://mp.weixin.qq.com/s/EH8b18B-CgZZ2u3dEUR1dg">here</a> and <a href="https://muchong.com/t-16248230-1">here</a>. </p>
 
-<p><b>This page is regularly updated.</b></p>
+<p><b>This page is regularly updated.</b> (Last updated in February 2025)</p>
