--- a/misc/_posts/2024-11-30-openings.md
+++ b/misc/_posts/2024-11-30-openings.md
@@ -19,3 +19,16 @@ layout: default
     // Display the date in the HTML 
     document.getElementById("currentDate").textContent = formattedDate; 
 </script>
+
+
+
+<p id="datetime"></p>
+
+<script>
+  // Get current date and time
+  var now = new Date();
+  var datetime = now.toLocaleString();
+
+  // Insert date and time into HTML
+  document.getElementById("datetime").innerHTML = datetime;
+</script>
