--- a/team/_posts/2024-12-27-lijia-yao.md
+++ b/team/_posts/2024-12-27-lijia-yao.md
@@ -10,4 +10,4 @@ image: /images/team/lijia-yao.jpg
 orcid: 0000-0001-6833-5737
 ---
 
-I received my bachelor’s degree in Materials Science and Engineering at Southeast University, China, and gained my master’s degree in Materials Science and Engineering at ShanghaiTech University, China. My master’s program focused on the design, synthesis and optical of novel sulfide compounds. There I had some experiences on single crystal structure resolution and structure analysis. And now I am thrilled to be challenged with the DFT calculations of solid electrolytes. My hobbies include travelling, chess, bridge and go.
+I received my bachelor’s degree in Materials Science and Engineering at Southeast University, China, and gained my master’s degree in Materials Science and Engineering at ShanghaiTech University, China. My master’s program focused on the design, synthesis and optical of novel sulfide compounds. There I had some experiences on single crystal structure resolution and structure analysis. And now (Spring 2025) I am thrilled to be challenged with the DFT calculations of solid electrolytes. My hobbies include travelling, chess, bridge and go.
