--- a/team/_posts/2024-12-27-lijia-yao.md
+++ b/team/_posts/2024-12-27-lijia-yao.md
@@ -6,8 +6,9 @@ handle: lijiayao
 github: ljy-97-dev
 scholar: vF6m8YsAAAAJ
 image: /images/team/lijia-yao.jpg
-#email: yixuanzhang@hkust-gz.edu.cn
+email: lyao287@connect.hkust-gz.edu.cn
 orcid: 0000-0001-6833-5737
+alumni: false
 ---
 
 I received my bachelor’s degree in Materials Science and Engineering at Southeast University, China, and gained my master’s degree in Materials Science and Engineering at ShanghaiTech University, China. My master’s program focused on the design, synthesis and optical of novel sulfide compounds. There I had some experiences on single crystal structure resolution and structure analysis. And now (Spring 2025) I am thrilled to be challenged with the DFT calculations of solid electrolytes. My hobbies include travelling, chess, bridge and go.
