--- a/team/_posts/2024-08-01-yuheng-li.md
+++ b/team/_posts/2024-08-01-yuheng-li.md
@@ -13,4 +13,4 @@ orcid: 0000-0002-1865-1122
 office: W1-307
 ---
 
-Starting from August 2024, I am an Assistant Professor at the [Hong Kong University of Science and Technology (Guangzhou)](https://www.hkust-gz.edu.cn/) in the [Sustainable Energy and Environment Thrust](https://facultyprofiles.hkust-gz.edu.cn/thrust-faculties?code=10011A10000000000H24). Before this, I was an [Eric and Wendy Schmidt AI in Science Fellow](https://www.schmidtsciences.org/schmidt-ai-in-science-postdocs/) at the National University of Singapore, hosted by [Prof. Pieremanuele Canepa](https://caneparesearch.org/). I obtained my PhD degree (2020) in [NanoEngineering](https://ne.ucsd.edu/) from [University of California San Diego (UCSD)](https://ucsd.edu/) under the guidance of [Prof. Kesong Yang](http://materials.ucsd.edu/), and my Bachelor’s degree (2015) from [Zhejiang University](https://www.zju.edu.cn/english/). My research focuses on computational and data-driven materials design for sustainable energy applications, with a particular focus on solid-state rechargeable-battery materials and hybrid halide perovskites.
+Starting from August 2024, I am an Assistant Professor at the [Hong Kong University of Science and Technology (Guangzhou)](https://www.hkust-gz.edu.cn/) in the [Sustainable Energy and Environment Thrust](https://facultyprofiles.hkust-gz.edu.cn/thrust-faculties?code=10011A10000000000H24). I was awarded the national high-level overseas talent program for young scientists in 2025. Before the current appointment, I was an [Eric and Wendy Schmidt AI in Science Fellow](https://www.schmidtsciences.org/schmidt-ai-in-science-postdocs/) at the National University of Singapore, hosted by [Prof. Pieremanuele Canepa](https://caneparesearch.org/). I obtained my PhD degree (2020) in [NanoEngineering](https://ne.ucsd.edu/) from [University of California San Diego (UCSD)](https://ucsd.edu/) under the guidance of [Prof. Kesong Yang](http://materials.ucsd.edu/), and my Bachelor’s degree (2015) from [Zhejiang University](https://www.zju.edu.cn/english/). My research focuses on computational and data-driven materials design for sustainable energy applications, with a particular focus on solid-state rechargeable-battery materials and hybrid halide perovskites.
